# hyperlight-unikraft

./: .gitignore  README.md
.github/workflows/: benchmarks.yml  host-checks.yml  publish-examples.yml  test-examples.yml
demos/supply-chain/: .gitignore  README.md  c2_server.py  graphic.html  victim_app.py
demos/supply-chain/bare-metal/: run.sh
demos/supply-chain/hl-unikraft/: Dockerfile  Justfile  kraft.yaml
demos/supply-chain/reqeusts/: __init__.py  api.py  stealer.py
docs/: host_functions.md  python-packages.md
examples/dotnet/: Justfile
examples/dotnet-http/: Dockerfile  Justfile  KestrelHyperlight.csproj  Program.cs  kraft.yaml
examples/dotnet-nativeaot/: HelloNativeAot.csproj  Justfile
examples/echo-wasm-host-fxn/: Cargo.toml  Justfile  README.md
examples/echo-wasm-host-fxn/src/: main.rs
examples/go/: Dockerfile  Justfile
examples/go-http/: Dockerfile  Justfile  kraft.yaml  main.go  patch_interp.py
examples/helloworld-c/: .dockerignore  Justfile  URUNC.md  urunc.Dockerfile  urunc.json
examples/hostfs-posix-c/: Justfile
examples/hostfs-posix-py/: Justfile
examples/multifn-c/: Justfile
examples/networking-py/: Dockerfile  Justfile  echo_server_test.py  http_get.py  kraft.yaml
examples/nodejs/: Justfile
examples/powershell/: Justfile
examples/python/: Justfile
examples/python-agent/: Justfile  agent.py
examples/python-agent-driver/: Dockerfile  Justfile  hl_pydriver.c  pydoc_stub.py
examples/python-tools/: Justfile
examples/rust/: Justfile
examples/shell/: Justfile
host/: Cargo.toml
host/src/: lib.rs  main.rs  pyhl.rs  wasm_host_fns.rs
host/tests/: pyhl_runtime.rs
scripts/: test-examples.ps1  test-examples.sh
