[package]
name = "hyperlight-unikraft-host"
version = "0.10.0"
edition = "2021"
description = "Embedded Hyperlight host for running Unikraft unikernels"
license = "MIT OR Apache-2.0"

[lib]
name = "hyperlight_unikraft"
path = "src/lib.rs"
crate-type = ["lib"]

[[bin]]
name = "hyperlight-unikraft"
path = "src/main.rs"

[[bin]]
name = "multifn-test"
path = "src/bin/multifn_test.rs"

[[bin]]
name = "pydriver-run"
path = "src/bin/pydriver_run.rs"

[[bin]]
name = "pyhl"
path = "src/bin/pyhl.rs"

[features]
default = []
wasm-host-fns = ["dep:wasmtime", "dep:wasmtime-wasi"]

[dependencies]
# danbugs/hyperlight perf/whp-warm-start — snapshot file support + WHP warm-start optimizations.
hyperlight-host = { git = "https://github.com/danbugs/hyperlight", rev = "5cf37d92", features = ["executable_heap", "hw-interrupts", "whp-no-surrogate"] }
clap = { version = "4", features = ["derive", "env"] }
anyhow = "1"
memmap2 = "0.9"
serde_json = "1"
base64 = "0.22"
socket2 = { version = "0.5", features = ["all"] }
ureq = "3"
flate2 = "1"
tar = "0.4"
wasmtime = { version = "36.0.2", optional = true, default-features = false, features = ["cranelift", "runtime", "std"] }
wasmtime-wasi = { version = "36.0.2", optional = true, default-features = false, features = ["preview1"] }

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["fs"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_System_IO", "Win32_System_Ioctl", "Win32_Storage_FileSystem", "Win32_Networking_WinSock"] }

[dev-dependencies]
tempfile = "3"
